--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -1,4 +1,4 @@
-name: Ruby Gem
+name: Release Gem
 
 on:
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.3.x
+        ruby-version: 3.3
 
     - name: Publish to GPR
       run: |
